--- a/JSA07/B2/style.css
+++ b/JSA07/B2/style.css
@@ -94,6 +94,6 @@ button
 {
     border-color: orange;
     background: rgba(0, 0, 0, 0.0);
-    color: orange;
+    color: hsl(39, 99%, 48%);
     font-size: 20px;
 }
