--- a/JSA07/aDungeon/game/style.css
+++ b/JSA07/aDungeon/game/style.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 body 
 {
     background-color: rgba(20, 18, 18, 0.753);
@@ -6,17 +9,19 @@ body
     overflow: hidden;
     color:purple;
 }
-*{
-    box-sizing: border-box;
-}
+
 .game-container
 {
     position: relative;
-    width: 400px;
-    height: 500px;
+    width: 387px;
+    height: 480px;
     outline: 1px solid #ffff;
     margin: 0 auto;
     margin-top:20px;
     overflow: hidden;
     transform: scale(1.2) translateY(10%);
+}
+.game-container canvas
+{
+    image-rendering: pixelated;
 }
